# gridsight-site-planner

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: __init__.py  config.py  main.py  models.py
src/routes/: energy.py  health.py  layouts.py  parcels.py  visualize.py
src/services/: __init__.py  energy_service.py  gemini_service.py  solar_service.py
tests/: __init__.py  test_energy.py  test_health.py  test_layouts.py
